--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
+    <!--Meta tags-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Una página que muestra un funcionamiento del perceptrón">
+    <meta name="keywords" content="perceptron, deep learning, machine learning, artificial intelligence, maths, algorithms">
+
     <title>Perceptrón</title>
+
+    <!--Styles-->
+    <link rel="stylesheet" href="./css/style.css">
+
+    <!--Links-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Glory&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <section>
+    <header class="header">
+        <section class="cover">
             <h1>El Perceptrón</h1>
         </section>
     </header>
