First view done

--- a/index.html
+++ b/index.html
@@ -25,5 +25,59 @@
             <h1>El Perceptrón</h1>
         </section>
     </header>
+    <main class="content">
+        <section class="description">
+            <h2>¿Qué es?</h2>
+            <p mark>Un perceptrón es una abstracción de una neurona real. Éste toma varias entradas <i>x1,x2,...,xn</i>  y produce una salida.<br>Para la salida, Rosenblatt propuso que las entradas tuviesen pesos asciados <i>w1,w2,...,wn</i> , siendo estos números reales que expresan la importancia respectiva de cada entrada para la salida.<br>La salida de la neurona,  <i>0  o  1</i> , está determinada con base en que la suma ponderada,</p>
+        </section>
+        <form>
+            <section>
+                <h2>Datos</h2>
+                <section class="inputs">
+                    <label for="">
+                        <input type="number" placeholder="Dato 1">
+                    </label>
+                    <label for="">
+                        <input type="number" placeholder="Dato 2">
+                    </label>
+                    <label for="">
+                        <input type="number" placeholder="Dato 3">
+                    </label>
+                </section>
+            </section>
+            <section>
+                <h2>Pesos</h2>
+                <section class="weights">
+                    <label for="">
+                        <input type="number">
+                    </label>
+                    <label for="">
+                        <input type="number">
+                    </label>
+                    <label for="">
+                        <input type="number">
+                    </label>
+                </section>
+            </section>
+            <section>
+                <h2>Umbral</h2>
+                <section>
+                    <label for="">
+                        <input type="text">
+                    </label>
+                </section>
+            </section>
+            <section>
+                <h2>Resultado</h2>
+                <section>
+                    <p></p>
+                </section>
+            </section>
+        </form>
+    </main>
+    <footer class="footer">
+        <h2>Hecho por Daniel Armas</h2>
+        <h3>Ver en <a href="https://github.com/daniel692a/perceptron-js">GitHub</a> </h3>
+    </footer>
 </body>
 </html>
