--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
         <h2>Hecho por Daniel Armas</h2>
         <h3>Ver en <a href="https://github.com/daniel692a/perceptron-js">GitHub</a> </h3>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 </html>
